// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionList interactions > renders empty state and clicking Clear Filter calls setFilters 1`] = `
<div>
  <div
    class="mt-12"
  >
    <div
      class="mb-6 flex items-center justify-between"
    >
      <div>
        <h2
          class="text-2xl font-bold flex items-center gap-2"
        >
          0
           Transactions
        </h2>
        <p
          class="text-sm text-muted-foreground"
        >
          Your transactions for
           
          all time
        </p>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-12 px-6 has-[>svg]:px-6 gap-2 rounded-full"
          data-slot="button"
        >
          Filter
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-12 px-6 has-[>svg]:px-6 gap-2 rounded-full"
          data-slot="button"
        >
          Export list
          <svg
            aria-hidden="true"
            class="lucide lucide-download h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center py-16"
    >
      <div
        class="mb-6 flex h-16 w-16 items-center justify-center rounded-full bg-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-receipt h-8 w-8 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
          />
          <path
            d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
          />
          <path
            d="M12 17.5v-11"
          />
        </svg>
      </div>
      <h3
        class="mb-2 text-xl font-semibold"
      >
        No matching transaction found for the selected filter
      </h3>
      <p
        class="mb-6 text-center text-sm text-muted-foreground"
      >
        Change your filters to see more results, or add a new product.
      </p>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-6 py-2 has-[>svg]:px-4"
        data-slot="button"
      >
        Clear Filter
      </button>
    </div>
  </div>
</div>
`;

exports[`TransactionList interactions > renders loading skeleton and matches snapshot 1`] = `
<div>
  <div
    class="mt-12"
  >
    <div
      class="mb-6 flex items-center justify-between"
    >
      <div>
        <div
          class="animate-pulse rounded-md bg-muted h-8 w-40"
        />
        <div
          class="animate-pulse rounded-md bg-muted mt-2 h-4 w-56"
        />
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-6 py-2 has-[>svg]:px-4 gap-2 rounded-full"
          data-slot="button"
          disabled=""
        >
          Filter
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-6 py-2 has-[>svg]:px-4 gap-2 rounded-full"
          data-slot="button"
          disabled=""
        >
          Export list
          <svg
            aria-hidden="true"
            class="lucide lucide-download h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="space-y-0"
    >
      <div
        class="flex items-center justify-between border-b py-4 last:border-0"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="animate-pulse bg-muted h-12 w-12 rounded-full"
          />
          <div>
            <div
              class="animate-pulse rounded-md bg-muted h-5 w-32"
            />
            <div
              class="animate-pulse rounded-md bg-muted mt-1 h-4 w-24"
            />
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-5 w-20"
          />
          <div
            class="animate-pulse rounded-md bg-muted mt-1 h-4 w-16"
          />
        </div>
      </div>
      <div
        class="flex items-center justify-between border-b py-4 last:border-0"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="animate-pulse bg-muted h-12 w-12 rounded-full"
          />
          <div>
            <div
              class="animate-pulse rounded-md bg-muted h-5 w-32"
            />
            <div
              class="animate-pulse rounded-md bg-muted mt-1 h-4 w-24"
            />
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-5 w-20"
          />
          <div
            class="animate-pulse rounded-md bg-muted mt-1 h-4 w-16"
          />
        </div>
      </div>
      <div
        class="flex items-center justify-between border-b py-4 last:border-0"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="animate-pulse bg-muted h-12 w-12 rounded-full"
          />
          <div>
            <div
              class="animate-pulse rounded-md bg-muted h-5 w-32"
            />
            <div
              class="animate-pulse rounded-md bg-muted mt-1 h-4 w-24"
            />
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-5 w-20"
          />
          <div
            class="animate-pulse rounded-md bg-muted mt-1 h-4 w-16"
          />
        </div>
      </div>
      <div
        class="flex items-center justify-between border-b py-4 last:border-0"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="animate-pulse bg-muted h-12 w-12 rounded-full"
          />
          <div>
            <div
              class="animate-pulse rounded-md bg-muted h-5 w-32"
            />
            <div
              class="animate-pulse rounded-md bg-muted mt-1 h-4 w-24"
            />
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-5 w-20"
          />
          <div
            class="animate-pulse rounded-md bg-muted mt-1 h-4 w-16"
          />
        </div>
      </div>
      <div
        class="flex items-center justify-between border-b py-4 last:border-0"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="animate-pulse bg-muted h-12 w-12 rounded-full"
          />
          <div>
            <div
              class="animate-pulse rounded-md bg-muted h-5 w-32"
            />
            <div
              class="animate-pulse rounded-md bg-muted mt-1 h-4 w-24"
            />
          </div>
        </div>
        <div
          class="text-right"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-5 w-20"
          />
          <div
            class="animate-pulse rounded-md bg-muted mt-1 h-4 w-16"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
